src/pages/styles/main.css
 /* adobe express  */

 .add-ones-hero {
     background: url('../images/Home-gradiant-bg.svg') !important;
     background-repeat: no-repeat;
     background-size: cover !important;
 }

 .add-ones-hero>div {
     width: 70% !important;
     margin: 3% auto;
     gap: 5%;
 }

 .add-ones-hero>div>div {
     width: 50% !important;
 }

 .add-ones-hero>div>div:nth-child(2) {
     display: flex;
     justify-content: center;
     margin: auto;
 }

 .add-ones-hero>div>div>h1 {
     color: white;
     font-family: inherit;
     font-size: 34pt;
 }

 .add-ones-hero>div>div>p {
     color: #F7DBFD;
     font-size: 17pt;
 }

 .add-ones-hero>div>div>p>a {
     text-decoration: underline !important;
     color: white !important;
 }

 .adobe-express-hero a {
     border-color: #F4DFF9 !important;
     background: transparent !important;
     border-radius: 18px !important;
 }

 .adobe-express-hero a>span {
     font-size: 13pt !important;
 }

 .homeExpressLandingPage {
     background-image: url('../images/Landingpage.png');
     background-repeat: no-repeat;
     background-size: contain;
     width: 600px;
     height: 400px;
     background-position: center !important;
 }

 .explore>div {
     width: 70% !important;
     margin: auto !important;
     padding: 4% 0 !important;
 }

 .explore a {
     border-color: #626262 !important;
 }

 .explore a>span {
     color: #525252 !important;
 }

 .explore p {
     color: #424242 !important;
 }

 .explore>div>div {
     width: 100% !important;
     justify-content: center !important;
     gap: 5%;
     margin: auto !important;
 }

 .unleash-power>div>div>div {
     padding: 2% 1% !important;
     width: 34rem !important;
 }

 .unleash-power>div>div>div>div>div>div:nth-child(2)>a {
     border: none !important;
     text-decoration: underline !important;
     color: #1473E6 !important;
 }

 .unleash-power>div>div>div>div>div>div:nth-child(2)>a:hover {
     background-color: transparent !important;
 }

 .unleash-power>div>div>div>div>div>div:nth-child(2)>a>span>span {
     color: #1473E6 !important;
     font-size: 16px !important;
 }

 .unleash-power h2 {
     font-size: 35px !important;
 }

 .announcement>div>div>div {
     width: 100%;
     text-align: center;
 }

 .announcement>div,
 .exploreCapabilities>div {
     padding: 3% 0 0 0 !important;
 }

 .announcement>div>div>div>h3,
 .viewAddOn h3 {
     font-size: 25pt !important;
 }

 .mini-card {
     padding: 2% 0 3% 0 !important;
 }

 .mini-card h3 {
     font-size: large !important;
     font-weight: 700 !important;
 }

 .mini-card>div {
     padding: 10px !important;
     gap: 5% !important;
     width: 50% !important;
     margin: auto !important;
     max-width: 100% !important;
 }

 .mini-card>div>div {
     display: flex !important;
     justify-content: center !important;
 }

 .mini-card>div>div>div {
     width: 100% !important;
     margin: 0 !important;
 }

 .mini-card>div>div>div>div:nth-child(2) {
     width: 200px !important;
     padding: 0px 0 0 4% !important;
     border: none !important;
 }

 .support-tools>div>div>div>div:first-child {
     width: 32% !important;
 }

 .viewAddOn>div {
     padding: 3% 0 !important;
 }

 .viewAddOn>div>div>div {
     margin: auto !important;
     text-align: center !important;
 }

 .viewAddOn>div>div>div>div:nth-child(3) {
     display: flex !important;
     justify-content: center !important;
 }

 .viewAddOn p {
     font-size: 15pt !important;
     margin-top: 2%;
     color: white !important;
 }

 .viewAddOn>div>div {
     margin: auto !important;
 }

 .explore p:first-child {
     width: 46% !important;
 }

 .viewAddOn>a>span,
 .viewAddOn a>span>span,
 .add-ones-hero>div>div:first-child>div>div>div:nth-child(2)>a>span>span,
 .adobe-express-hero a>span>span {
     color: white !important;
 }

 .viewAddOn a {
     background-color: transparent !important;
     border-color: white !important;
 }

 .viewAddOn>div>div>div>div:last-child {
     display: flex !important;
     justify-content: center !important;
 }

 .viewAddOn h3>span>a {
     display: none !important;
 }

 .support-tools h3 {
     white-space: nowrap !important;
 }

 .launchAddOn {
     background-color: white !important;
 }

 .launchAddOn>div>div {
     width: 100% !important;
     display: flex !important;
     justify-content: center !important;
 }

 .launchAddOn>div>div>div {
     width: fit-content !important;
 }

 .launchAddOn a {
     background-color: transparent !important;
     border-color: black !important;
 }

 .launchAddOn a>span>span {
     color: black !important;
 }

 .connect-team {
     background-color: #f8f8f8 !important;
 }

 .connect-team>div>div {
     padding: 0 0 5% 0 !important;
 }

 .boxmodal {
     padding: 2% 4% !important;
 }

 .boxmodal a {
     background: none !important;
     border: 2px solid !important;
 }

 .boxmodal h2 {
     font-size: 20pt;
 }

 .boxmodal>div {
     width: 70%;
     margin: auto;
 }

 .marketPlace>div>div>div>div:last-child {
     border: none !important;
     justify-content: start !important;
 }

 .marketPlace h3 {
     font-size: 14pt !important;
 }

 .marketPlace>div>div>div>div:last-child>div>p {
     margin-top: 5px !important;
     -webkit-line-clamp: 3 !important;
     font-size: 12pt !important;
     font-weight: 500 !important;
 }

 .marketPlace>div>div:nth-child(2)>div>div:last-child>div>p,
 .marketPlace>div>div:nth-child(3)>div>div:last-child>div>p {
     width: 80% !important;
 }

 .marketPlace>div>div:nth-child(1)>div>div:last-child>div>p,
 .inColumn>div>div:nth-child(2)>div>div:last-child>div>p {
     width: 90% !important;
 }

 .boxmodal>div>div>div>div>div {
     width: 80% !important;
     margin: auto !important;
 }

 .inColumn>div>div:last-child>div>div:first-child {
     background: url("../images/Bg-blind.svg");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center !important;
     margin-top: 5%;
 }
/* ... */

